fixed various styling issues on smaller screens. Temporarily removed the larger background image, since it made up a large portion of the repoistory and app size. Changing resolution in settings will therefore not actually change anything

--- a/public/styles.css
+++ b/public/styles.css
@@ -230,10 +230,31 @@ body {
   max-width: 96%;
 }
 
-@media (max-width: 850px) {
+#musicAttributionSettings {
+  display: none;
+}
+
+@media (max-width: 1500px) {
+  #musicAttributionSettings {
+    display: initial;
+  }
+  #musicAttribution {
+    display: none;
+  }
+}
+
+@media (max-width: 950px) {
   .grid {
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
+  }
+  #settings {
+    position: fixed;
+    top: 75px;
+    font-size: 8px;
+    padding: 2px;
+    left: 2px;
+    width: 80px;
   }
   .buyButton {
     padding: 3px;
@@ -266,8 +287,8 @@ body {
   #settingsDisplay {
     padding: 10px;
     margin-top: 100px;
-    width: 200px;
-    height: 150px;
+    width: 250px;
+    height: 200px;
   }
 }
 
@@ -300,7 +321,7 @@ body {
     padding: 6px;
   }
   #toggleNotificationsButton {
-    top: 40px !important;
+    top: 50px !important;
     font-size: 7px !important;
     padding: 2px !important;
     left: 90% !important;
